@@ -1,0 +1,53 @@
+<div id="manager-actions">
+    <span>{translate(#Action#)}: &nbsp;</span>
+    <a class="action add" href="{makeUrl(#add#,#adminguestbook#,#guestbook#)}">{translate(#New Entry#)}</a>
+</div>
+<div id="content">
+    <div id="content-header">
+        <h2>{translate(pageTitle)} :: {translate(mode)}</h2>
+        <div class="message">{msgGet()}</div>
+    </div>
+    <form name="frmGuestbookList" method="post" flexy:ignore id="frmGuestbookList">
+        <h3>{translate(#Guestbook List#)}</h3>
+        <fieldset class="noBorder">
+        <input type="hidden" name="action" value="delete" />
+            <table class="full">
+                <thead>
+                    <tr class="infos">
+                        <td class="right" colspan="6">
+                        <flexy:include src="admin_pager_table.html" />
+                        </td>
+                    </tr>
+                    <tr>
+                      <th width="5"><div align="center"><input type="checkbox" name="checkAll" id="checkAll" onClick="javascript:applyToAllCheckboxes('frmGuestbookList', 'frmDelete[]', this.checked)" /></div></th>
+                      <th width="10">{translate(#ID#)}</th>
+                      <th width="150">{translate(#Date#)}</th>
+                      <th width="200">{translate(#Name#)}</th>
+                      <th width="200">{translate(#E-Mail#)}</th>
+                      <th nowrap>{translate(#Message#)}</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr class="infos">
+                        <td class="right" colspan="6">
+                        <flexy:include src="admin_pager_table.html" />
+                        </td>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    <tr class="{switchRowClass()}" flexy:foreach="aPagedData[data],key,aValue">
+                      <td align="center"><input class="noBorder" type="checkbox" name="frmDelete[]" value="{aValue[guestbook_id]}" /></td>
+                      <td>{aValue[guestbook_id]}</td>
+                      <td>{aValue[date_created]}</td>
+                      <td>{aValue[name]}</td>
+                      <td>{aValue[email]}</td>
+                      <td>{aValue[message]}</td>
+                     </tr>
+                </tbody>
+            </table>
+            <input type="submit" class="sgl-button" name="Delete" value="{translate(#delete selected#)}"
+                onclick="return confirmSubmit('entry', 'frmGuestbookList')" />
+        </fieldset>
+    </form>
+    <div class="spacer"></div>
+</div>
